# churn-intelligence-platform

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
configs/: model_config.yaml
docs/: architecture.md
notebooks/: 01_exploratory_data_analysis.ipynb  02_feature_engineering.ipynb  03_model_training_and_evaluation.ipynb
scripts/: evaluate.py  generate_data.py  init_db.sql  train.py
src/: __init__.py
src/api/: __init__.py  main.py  schemas.py
src/api/endpoints/: health.py  predict.py
src/data/: __init__.py  generator.py  loader.py  preprocessor.py  validator.py
src/evaluation/: __init__.py  explainability.py  metrics.py
src/features/: __init__.py  engineering.py  selection.py
src/models/: __init__.py  base.py
src/models/classical/: __init__.py  logistic_regression.py  random_forest.py  xgboost_model.py
src/models/deep_learning/: __init__.py  neural_network.py  tabular_transformer.py
src/pipeline/: __init__.py  inference.py  training.py
src/visualization/: __init__.py  dashboard.py  plots.py
tests/: conftest.py
tests/test_api/: test_endpoints.py
tests/test_data/: test_generator.py  test_preprocessor.py  test_validator.py
tests/test_evaluation/: test_metrics.py
tests/test_features/: test_engineering.py
tests/test_models/: test_classical.py  test_deep_learning.py
